--- a/p5/vector/index.html
+++ b/p5/vector/index.html
@@ -8,8 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <script src="../p5.js"></script>
   </head>
 
   <body>
