--- a/p5/stars/index.html
+++ b/p5/stars/index.html
@@ -13,13 +13,12 @@
     }
   </style>
   <script src="../p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
 </head>
 
 <body>
-  <main>
-  </main>
+  <div id="canvas-parent">
+  </div>
 </body>
 
 </html>
