--- a/p5/stars/index.html
+++ b/p5/stars/index.html
@@ -9,7 +9,7 @@
     body {
       padding: 0;
       margin: 0;
-      background-color: #1b1b1b;
+      background-color: #222629;
     }
   </style>
   <script src="../p5.js"></script>
