add meteor shower

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <ul>p5.js
-        <li><a href="p5/stars/index.html">stars</a></li>
+        <li><a href="p5/moving stars + blackhole/index.html">moving stars</a></li>
+        <li><a href="p5/stars + meteor shower/index.html">Shining stars and meteor shower</a></li>
         <li><a href="p5/vector/index.html">vector</a></li>
     </ul>
 
